Boardtile correctly controls visibility of text, clicks are ignored in the cooldown from the second answer

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,14 @@ html, body {
     cursor:pointer;
 }
 
-.board-tile-selected{
+.board-tile-correct{
   background-color:burlywood;
+}
+
+h2{
+  visibility: hidden
+}
+
+h2.visible{
+  visibility:visible
 }
